fix library endpoint
