# docs/swagger.json
@@ -37,6 +37,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter by lyrics",
+                        "name": "lyrics",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
